# iam

./: .gitignore  ChangeLog.md  README.md  iam.cabal  log.smt2  package.yaml  stack.yaml  subtractor.cabal  tipsy.css  trace-viz.html
ataed-2018-paper/: .gitignore  Makefile  ataed-18.bib  biblio.bib  main.tex
ataed-2018-paper/presentation/: Makefile  epilogue.html  intro-and-isa-semantics.html  main.html  plan.md  preamble.html  scenarios.html  slides.html  synthesis.html
ataed-2018-paper/tex/: conclusion.tex  iam.tex  instructions.tex  intro.tex  metalanguage.tex  oracles.tex  scenarios.tex  semantics.tex
ataed-2018-paper/workcraft/: ataed-car-cpog.work
examples/: add.asm  ataed-18-robot-parallel.asm  ataed-18-robot-sequential.asm  energy.asm  gcd.asm  simple.asm
src/: AST.hs  FS.hs  Iam.hs  Machine.hs  Metalanguage.hs  MetalanguageITE.hs  State.hs  StateF.hs  Subtractor.hs  SubtractorCPS.hs
src/Iam/: Assembly.hs  Semantics.hs  State.hs  Types.hs
src/Iam/Examples/: Common.hs  SubtractArray.hs  SumArray.hs  Swap.hs
src/Machine/: Assembly.hs  Graph.hs  Instruction.hs  Metalanguage.hs  PetriNet.hs  Program.hs  Semantics.hs  SemanticsITE.hs  SemanticsNum.hs  SemanticsTyped.hs  Simulator.hs  State.hs  Types.hs  Value.hs
src/Machine/Examples/: Common.hs  Energy.hs  InstructionDeps.hs  Max.hs  Oracles.hs  SumArray.hs  Swap.hs
src/Machine/Instruction/: Decode.hs  Encode.hs
src/Machine/Semantics/: Dependencies.hs  Oracle.hs  Simulate.hs  SimulateITE.hs  Symbolic.hs  SymbolicITE.hs  SymbolicNew.hs
src/Machine/Semantics/Graph/: Dataflow.hs  PetriNet.hs
src/Machine/Semantics/Symbolic/: Examples.hs  Instruction.hs  Machine.hs  SMT.hs  State.hs  SymEngine.hs  SymEngineNew.hs  SymEngineTyped.hs  TraceRender.hs  Types.hs  TypesTyped.hs  TypesTypedCoyonead.hs
src/Machine/Types/: Value.hs
src/Subtractor/: Assembly.hs  Class.hs  Semantics.hs  State.hs  Types.hs  Verification.hs
src/Subtractor/Examples/: Common.hs  SubtractArray.hs  Swap.hs
test/: Main.hs
test/Machine/Test/: Add.hs  GCD.hs  SumArray.hs
