name:                iam
synopsis:            I am an Inglorious Adding Machine
version:             0.1.0.0
homepage:            https://github.com/tuura/iam#readme
author:              Georgy Lukyanov, Andrey Mokhov
maintainer:          lukyanov.georgy@gmail.com
copyright:           2017 Georgy Lukyanov, Andrey Mokhov
category:            Hardware
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Metalanguage
                     , Machine.Types
                     , Machine.Instruction
                     , Machine.Instruction.Decode
                     , Machine.Instruction.Encode
                     , Machine.Assembly
                     , Machine.Program
                     , Machine.Semantics
                     , Machine.Semantics.Simulate
                     , Machine.Semantics.Dependencies
                     , Machine.Semantics.Oracle
                     , Machine.Examples.Common
  build-depends:       base >= 4.7 && < 5
                     , containers   >= 0.5.7.1
                     , mtl          >= 2.2.1
                     , transformers >= 0.5.2.0
                     , pretty-simple
                     , algebraic-graphs
                     , process
                     , selective
                     , sbv
  default-language:    Haskell2010

test-suite test-programs
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      Machine.Test.Add
  build-depends:      iam
                    , base >= 4.7 && < 5
                    , containers   >= 0.5.7.1
                    , mtl          >= 2.2.1
                    , transformers >= 0.5.2.0
                    , pretty-simple
                    , smallcheck   >= 1.1.5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tuura/iam
